<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grafite"
    tools:context=".MENU">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_button"
        android:text="@string/minhas_cota_es"
        android:textColor="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_orcamento" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_button"
        android:text="@string/meu_perfil"
        android:textColor="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_button"
        android:text="@string/compartilhar"
        android:textColor="#676767"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="ScriptBOT"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Small Business | Área do Cliente"
        android:textColor="#00FF0B"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/titulo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="MENU"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_orcamento"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_button"
        android:text="@string/or_amentos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <ImageButton
        android:id="@+id/voltar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@android:drawable/ic_media_rew" />


</androidx.constraintlayout.widget.ConstraintLayout>