<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grafite"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        android:background="#888888"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkExterno" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="COR BASE"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cbCores"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/cbCores"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="ScriptBOT"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:text="Código do Cliente"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cod_cli"
        app:layout_constraintEnd_toEndOf="@+id/cod_cli"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/cod_cli" />

    <TextView
        android:id="@+id/titulo6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Largura"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/comp_input"
        app:layout_constraintStart_toStartOf="@+id/larg_input"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <TextView
        android:id="@+id/titulo5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Metragem total das Paredes"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/x"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/comp_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/larg_input"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/igual"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/resultado"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/comp_input"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <EditText
        android:id="@+id/comp_input"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#C0CA33"
        app:layout_constraintStart_toEndOf="@+id/larg_input"
        app:layout_constraintTop_toBottomOf="@+id/titulo7"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/larg_input"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColor="#C0CA33"
        android:textIsSelectable="false"
        android:verticalScrollbarPosition="defaultPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo6" />

    <TextView
        android:id="@+id/titulo7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/altura"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/comp_input"
        app:layout_constraintStart_toStartOf="@+id/comp_input"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="136dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:text="@string/enviar"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="17sp"
        app:backgroundTint="#00FF0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center|center_vertical"
        android:textAllCaps="false"
        android:textColor="#CDDC39"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:verticalScrollbarPosition="right"
        app:layout_constraintStart_toEndOf="@+id/comp_input"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/resultado2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/resultado"
        app:layout_constraintTop_toBottomOf="@+id/titulo5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Mt²"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/resultado"
        app:layout_constraintTop_toTopOf="@+id/resultado" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />


    <TextView
        android:id="@+id/titulo9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or_amento_pintura"
        android:textAllCaps="false"
        android:textColor="#4C4C4C"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Small Business | Área do Cliente"
        android:textColor="#00FF0B"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cod_cli"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="impact"
        android:gravity="center_horizontal|center_vertical"
        android:maxLength="5"
        android:textAllCaps="true"
        android:textColor="#CDDC39"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#888888"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cod_cli" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="#888888"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comp_input" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/ambiente"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <CheckBox
        android:id="@+id/chkInterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:bufferType="normal"
        android:checked="false"
        android:gravity="center|left"
        android:text="Interno"
        android:textColor="#FFFFFF"
        android:value="Interno"
        app:buttonTint="#11FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/chkExterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:text="@string/externo"
        android:value="Externo"
        android:textColor="#FFFFFF"
        app:buttonTint="#11FF00"
        app:layout_constraintStart_toEndOf="@+id/chkInterno"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/cbCores"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:dropDownWidth="wrap_content"
        android:dropDownSelector="@color/verde"
        android:gravity="center"
        android:scrollbarStyle="outsideInset"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dialog"
        android:textColor="#13F802"
        app:buttonTint="#13F802"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chkExterno"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/txtObs"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#ffffff"
        android:gravity="top"
        android:hint="Observações"
        android:padding="2dp"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textColor="#2E7D32"
        android:textColorHint="#757575"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <ImageButton
        android:id="@+id/voltar_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@android:drawable/ic_media_rew" />


</androidx.constraintlayout.widget.ConstraintLayout>